tests/files/lexer_tests/should_fail/037.cmdr
// Illegal character in variable name (ascii 4)
myvar = 4;